Store vulnerabilities in SBOM and read back from the report. Store ATR task info in SBOM as a reference.

--- a/atr/templates/check-selected-path-table.html
+++ b/atr/templates/check-selected-path-table.html
@@ -67,7 +67,7 @@
               {% endif %}
               {% if path.suffixes[-2:] == [".cdx", ".json"] %}
                 <a href="{{ as_url(get.sbom.report, project=project_name, version=version_name, file_path=path) }}"
-                   class="btn btn-sm btn-outline-secondary">Show SBOM</a>
+                   class="btn btn-sm btn-outline-secondary">SBOM report</a>
               {% endif %}
               {% if has_errors %}
                 <a href="{{ as_url(get.report.selected_path, project_name=project_name, version_name=version_name, rel_path=path) }}"
